--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "joi": "^13.6.0",
+    "request": "^2.88.0",
     "response-time": "^2.3.2",
     "winston": "^3.0.0"
   },
