--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cheerio": "^1.0.0-rc.2",
+    "csv-string": "^3.1.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "joi": "^13.6.0",
