--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "joi": "^13.6.0",
+    "json2csv": "^4.2.1",
+    "moment": "^2.22.2",
     "request": "^2.88.0",
     "response-time": "^2.3.2",
     "winston": "^3.0.0"
